[project]
name = "dst-qq"
version = "0.1.0"
description = "dst-qq"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    {name = "Console", module_name = "nonebot.adapters.console"}
]
plugins = []
plugin_dirs = ["dst_qq/plugins"]
builtin_plugins = ["echo"]
